Fix horizontal scrollbar and new first column margin

--- a/YouTube-Grid.user.css
+++ b/YouTube-Grid.user.css
@@ -2,7 +2,7 @@
 @name         YouTube Grid
 @author       Siguza
 @namespace    siguza.youtube-grid
-@version      1.0
+@version      1.0.1
 @description  Restores the old grid on the YouTube subscriptions timeline
 @homepageURL  https://github.com/Siguza/UserScripts
 ==/UserStyle== */
@@ -25,9 +25,9 @@
 }
 [page-subtype="subscriptions"] ytd-rich-item-renderer
 {
-    position: initial;
+    /*position: initial;*/
     width: 100%;
-    margin: 0;
+    margin: 0 !important;
     overflow: hidden;
 }
 }
